export const snapshot = {};

snapshot[`parse import foo/bar 1`] = `
[
  {
    end: 14,
    imports: ImportTree {
      segments: [
        SimpleSegment {
          args: undefined,
          as: undefined,
          name: "foo",
        },
        SimpleSegment {
          args: undefined,
          as: undefined,
          name: "bar",
        },
      ],
    },
    kind: "treeImport",
    start: 0,
  },
]
`;

snapshot[`parse #import foo(a,b) as baz from bar 1`] = `
[
  {
    end: 27,
    imports: ImportTree {
      segments: [
        SimpleSegment {
          args: undefined,
          as: undefined,
          name: "bar",
        },
        SimpleSegment {
          args: undefined,
          as: "baz",
          name: "foo",
        },
      ],
    },
    kind: "treeImport",
    start: 0,
  },
]
`;

snapshot[`parse #export(foo) with trailing space 1`] = `
[
  {
    args: [
      "Elem",
    ],
    end: 20,
    kind: "export",
    start: 5,
  },
]
`;

snapshot[`#export w/o closing paren 1`] = `
"expected text ')''
#export (A   Ln 1
          ^"
`;

snapshot[`parse extends 1`] = `
{
  args: [
    "a",
    "b",
  ],
  as: "Bar",
  end: 32,
  from: "baz",
  kind: "extends",
  name: "Foo",
  start: 0,
}
`;
